AAE-19797 fix sonar issues